data/derived/comb/progs/unify/prog8464.ml.out
Characters 110-111:
  List.fold_left f base args;;
                 ^
Error: This expression has type int -> int list -> int list
       but an expression was expected of type int -> int list -> int
       Type int list is not compatible with type int 
